# agentops-sdk

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
examples/: PYTHON_A2A_DEMO.md  crewai_a2a_demo.py  http_a2a_demo.py  python_a2a_demo.py  runaway_demo.py
services/api/app/: db.py  main.py  models.py  routes.py  schemas.py
services/web/: index.html  package-lock.json  package.json  tsconfig.json
services/web/src/: index.css  main.tsx
services/web/src/contexts/: ThemeContext.tsx
services/web/src/pages/: App.tsx
src/agentops/: __init__.py  config.py  guardrails.py  policy.py  runtime.py  transport.py
src/agentops/a2a_adapter/: __init__.py  client.py  flask_mixin.py  middleware.py  middleware_wsgi.py
src/agentops/patches/: http_monitor.py  openai_v1.py
